--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Sketch</title>
+    <title>Ghost Runner - Endless Platformer</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -13,14 +13,17 @@
   </head>
 
   <body>
-    <script  src="sketch.js"></script>
-    <script src="./GameElements/World.js"></script>
-    <script src="./GameElements/Land.js"></script>
-    <script src="./GameElements/Player.js"></script>
-    <script src="./GameMechanics/Physics.js"></script>
-    <script src="./GameMechanics/Controller.js"></script>
-    <script src="./GameMechanics/Animation.js"></script>
-
-    
+    <main>
+      <script src="GameElements/World.js"></script>
+      <script src="GameElements/Land.js"></script>
+      <script src="GameElements/Player.js"></script>
+      <script src="GameElements/Ghost.js"></script>
+      <script src="GameElements/Enemy.js"></script>
+      <script src="GameElements/Obstacle.js"></script>
+      <script src="GameElements/Coin.js"></script>
+      <script src="GameMechanics/Physics.js"></script>
+      <script src="GameMechanics/Controller.js"></script>
+      <script src="sketch.js"></script>
+    </main>
   </body>
 </html>
