--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <script src="GameElements/Coin.js"></script>
       <script src="GameMechanics/Physics.js"></script>
       <script src="GameMechanics/Controller.js"></script>
+      <script src="GameElements/Bat.js"></script>
       <script src="sketch.js"></script>
     </main>
   </body>
